backend-service-fixed.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: eira
  annotations:
    cloud.google.com/neg: '{"ingress":true}'
    cloud.google.com/backend-config: '{"default": "backend-health-config"}'
spec:
  ports:
  - port: 8080
    targetPort: 8080
  selector:
    app: backend
  type: ClusterIP
